# Digital-Circulation

cli/src/: cli.rs  error.rs  lib.rs
xcm/xcm-simulator/: Cargo.toml
xcm/xcm-simulator/fuzzer/src/: parachain.rs  relay_chain.rs
xcm/xcm-simulator/src/: lib.rs
