[package]
name = "xcm-simulator"
version = "0.9.19"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test kit to simulate cross-chain message passing and XCM execution"
edition = "2021"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
paste = "1.0.7"

frame-support = { git = "https://github.com/ajie1155/substrate", branch = "master" }
sp-io = { git = "https://github.com/ajie1155/substrate", branch = "master" }
sp-std = { git = "https://github.com/ajie1155/substrate", branch = "master" }

xcm = { path = "../" }
xcm-executor = { path = "../xcm-executor" }
digital_circulation-core-primitives = { path = "../../core-primitives"}
digital_circulation-dcchain = { path = "../../dcchain" }
digital_circulation-runtime-dcchains = { path = "../../runtime/dcchains" }
